BUILD - fixed issue with font size being too small for mobile, and added animation for empty bag

--- a/src/RootLayout.module.scss
+++ b/src/RootLayout.module.scss
@@ -60,6 +60,7 @@ body {
         left: 0px;
         opacity: 1;
         transition: opacity 1s;
+        z-index: 10;
     }
 
     .backDrop.hide {
@@ -121,6 +122,7 @@ body {
                 width: min-content;
             }
         }
+
         .checkoutItemsContainer {
             overflow-y: scroll;
             height: 100%;
@@ -133,6 +135,10 @@ body {
             height: 100%;
 
             .emptyBagImg {
+                animation: emptyBag ease-in-out;
+                animation-duration: 3s;
+                animation-iteration-count: infinite;
+
                 background-image: url(./assets/bag.png);
                 filter: opacity(0.1);
                 background-size: contain;
@@ -140,6 +146,20 @@ body {
                 background-repeat: no-repeat;
                 width: 10rem;
                 height: 10rem;
+            }
+        }
+
+        @keyframes emptyBag {
+            0% {
+                transform: rotate(20deg);
+            }
+
+            50% {
+                transform: rotate(-20deg);
+            }
+
+            100% {
+                transform: rotate(20deg);
             }
         }
 
